--- a/lang/oorexx/patches/patch-CMakeLists.txt
+++ b/lang/oorexx/patches/patch-CMakeLists.txt
@@ -1,8 +1,10 @@
-$NetBSD: patch-CMakeLists.txt,v 1.1 2024/04/02 18:59:16 rhialto Exp $
+$NetBSD: patch-CMakeLists.txt,v 1.2 2025/01/17 17:44:22 rhialto Exp $
 
 Doesn't respect CMAKE_INSTALL_MANDIR.
+Add a command to terminate rxapi after it was started.
+    https://sourceforge.net/p/oorexx/bugs/1993/
 
---- CMakeLists.txt.orig	2024-03-28 19:06:54.459436295 +0000
+--- CMakeLists.txt.orig	2023-04-19 14:25:14.000000000 +0000
 +++ CMakeLists.txt
 @@ -290,7 +290,7 @@ else ()
     set (INSTALL_INCLUDE_DIR include)
@@ -13,3 +15,11 @@ Doesn't respect CMAKE_INSTALL_MANDIR.
  endif ()
  
  # Set compiler and linker flags common to all build environments
+@@ -1035,6 +1035,7 @@ endif ()
+ # Build the rexx.img file
+ add_custom_command(OUTPUT ${ORX_IMAGE_OUTPUT_LOCATION}/rexx.img
+            COMMAND $<TARGET_FILE:rexximage> ${ORX_IMAGE_OUTPUT_LOCATION}/rexx.img
++           COMMAND $<TARGET_FILE:rxapi> stop
+            DEPENDS rexximage rxapi ${image_class_files} ${platform_rexx_img_depends}
+            WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+ 
