--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25320 2025/01/17 20:18:33 ktnb Exp $
+$NetBSD: TODO,v 1.25321 2025/01/18 19:14:53 wiz Exp $
 
 Suggested new packages
 ======================
@@ -541,6 +541,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o consul-1.9.5
 	o cook-2.31
 	o coordgenlibs-2.0.3
+	o coreutils-9.6
 	o cross-binutils-2.36.1
 	o cross-h8300-hms-binutils-2.17
 	o csound6-6.18.1
@@ -658,7 +659,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o gcc-mips-current-7.1.0
 	o gcin-1.5.5
 	o gcombust-0.1.55
-	o gdb-15.1
+	o gdb-16.1
 	o gdb7-7.12
 	o geneweb-7.0.0
 	o gens-2.15.5
