--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25321 2025/01/18 19:14:53 wiz Exp $
+$NetBSD: TODO,v 1.25322 2025/01/19 07:18:53 wiz Exp $
 
 Suggested new packages
 ======================
@@ -561,6 +561,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o dega-1.12
 	o delegate-9.9.13
 	o diction-1.14
+	o dillo-3.2.0
 	o direvent-5.2
 	o distcc-pump-3.3.5
 	o distccmon-gnome-3.3.5
