--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25322 2025/01/19 07:18:53 wiz Exp $
+$NetBSD: TODO,v 1.25323 2025/01/19 09:31:20 wiz Exp $
 
 Suggested new packages
 ======================
@@ -404,6 +404,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o R-RSQLite-2.6
 	o R-mapproj-3
 	o R-ncdf-1.6.9
+	o SDL2_mixer-2.8.0
 	o SOGo5-5.11.1 [wip]
 	o SOPE5-5.11.1 [wip]
 	o SQLiteCpp-2.5.0
@@ -515,6 +516,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o carbons-purple-0.2.3
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o cargo-c-0.10.8 [wip, needs rust 1.82]
+	o cbindgen-0.28.0
 	o cddbd-1.5.2
 	o cdrdao-1.2.5
 	o cdrkit-1.1.10
@@ -535,6 +537,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o colord-1.4.5
 	o colortail-0.3.3
 	o commit-patch-2.6
+	o compiledb-go-1.4.0
 	o compiz-0.9.14.2
 	o cone-0.92
 	o conserver8-8.2.6
@@ -542,6 +545,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o cook-2.31
 	o coordgenlibs-2.0.3
 	o coreutils-9.6
+	o cpp-httplib-0.18.5
 	o cross-binutils-2.36.1
 	o cross-h8300-hms-binutils-2.17
 	o csound6-6.18.1
@@ -725,6 +729,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o golem-0.0.6
 	o goocanvas-2.0.2
 	o gossip-0.31
+	o govulncheck-1.1.4
 	o gperiodic-3.0.3
 	o gprolog-1.5.0 [adds arm64 support]
 	o gps-17.0
@@ -753,6 +758,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o hamster-applet-2.32.1
 	o handbrake-1.7.0
 	o hanzim-3.5
+	o happy-2.1.4
+	o happy-lib-2.1.4
 	o harminv-1.4.1
 	o hashcash-1.23
 	o haskell-mode-13.20
@@ -848,6 +855,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libcec-6.0.2
 	o libdevq-0.0.4
 	o libdsk-1.5.19
+	o libexif-0.6.25
 	o libflash-0.4.13
 	o libgfshare-2.0.0
 	o libgiigic-1.1.2
@@ -966,14 +974,17 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o obs-studio-30.2
 	o ocaml-5.2.1 [wip]
 	o ocaml-cppo-1.6.9
+	o ocaml-dune-3.17.1
 	o ocaml-encore-0.8
 	o ocaml-eqaf-0.7
 	o ocaml-expat-1.1.0
+	o ocaml-findlib-1.9.8
+	o ocaml-lablgtk3-3.1.5
 	o ocaml-mtime-1.2.0
 	o ocaml-parsexp-0.14.0
 	o ocaml-resource-pooling-1.2
 	o ocaml-zip-110
-	o ocamlbuild-4.02.3
+	o ocamlbuild-0.15.0
 	o ocrad-0.25
 	o odbc-postgresql-9.06.0500
 	o ogre-2.3
@@ -1037,6 +1048,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pam-krb5-4.10
 	o pam-passwdqc-2.0.2
 	o pam-u2f-1.3.1
+	o pandoc-cli-3.6.2
 	o papirus-folders-1.8.0
 	o parrot-8.1.0
 	o passenger-6.0.20
@@ -1122,18 +1134,24 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-filebytes-0.10.2
 	o py-gammu-3.1
 	o py-gcovr-6.0
+	o py-google-api-python-client-2.159.0
 	o py-hgview-1.9.0
+	o py-icalendar-6.1.1
 	o py-input-pad-1.4.2
 	o py-mailman-3.3.10
 	o py-mitmproxy_rs-0.9.3
 	o py-newt-0.52.21
+	o py-numpy-2.2.2
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-orjson-3.10.14 [rust 1.82]
+	o py-orjson-3.10.15
 	o py-pdf-parser-0.7.4
 	o py-postgresql-5.1.2
 	o py-pytz_deprecation_shim-0.1.0.post0
+	o py-qt-builder-1.17.2
 	o py-quixote-3.3
+	o py-roman-5.0
 	o py-sbws-1.1.0
 	o py-scgi-2.0
 	o py-simpletal-5.1
