--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25343 2025/01/22 12:04:20 wiz Exp $
+$NetBSD: TODO,v 1.25344 2025/01/22 13:04:41 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1221,6 +1221,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o skktools-1.3.4
 	o skype-4.3
 	o smproxy-1.0.3
+	o snapcast-0.30.0
 	o snd-21.3
 	o snobol-2.1.5
 	o snoopy-2.4.14
