--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25345 2025/01/22 22:29:09 wiz Exp $
+$NetBSD: TODO,v 1.25346 2025/01/23 10:40:36 wiz Exp $
 
 Suggested new packages
 ======================
@@ -404,6 +404,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o R-RSQLite-2.6
 	o R-mapproj-3
 	o R-ncdf-1.6.9
+	o SDL-3.2.0
 	o SOGo5-5.11.1 [wip]
 	o SOPE5-5.11.1 [wip]
 	o SQLiteCpp-2.5.0
