--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25346 2025/01/23 10:40:36 wiz Exp $
+$NetBSD: TODO,v 1.25347 2025/01/23 21:03:46 wiz Exp $
 
 Suggested new packages
 ======================
@@ -770,6 +770,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o html2wml-0.4.11
 	o http_load-20140814
 	o hwloc-2.11
+	o iaito-5.9.9
 	o ibus-hangul-1.5.4
 	o icdprog-0.5
 	o icedtea-web-1.6.2
