--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25351 2025/01/27 13:29:48 wiz Exp $
+$NetBSD: TODO,v 1.25352 2025/01/28 10:21:27 wiz Exp $
 
 Suggested new packages
 ======================
@@ -755,7 +755,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o h8300-elf-binutils-2.36.1
 	o h8300-elf-gcc-7.1.0
 	o hamster-applet-2.32.1
-	o handbrake-1.7.0
+	o handbrake-1.9.0
 	o hanzim-3.5
 	o harminv-1.4.1
 	o hashcash-1.23
@@ -779,6 +779,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o icedtea-web-1.6.2
 	o ices-mp3-2.0.2
 	o icinga-base-2.12.3
+	o icinga2-2.14.4
 	o idzebra-2.2.2
 	o ike-2.0.1 [pkg/37032]
 	o imp-6.2.12
