--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25352 2025/01/28 10:21:27 wiz Exp $
+$NetBSD: TODO,v 1.25353 2025/01/28 17:23:51 gutteridge Exp $
 
 Suggested new packages
 ======================
@@ -1377,7 +1377,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o xerces-j-2.9.0
 	o xf86-video-fbdev-0.5.1
 	o xfce-4.20
-	o xfce4-battery-plugin-1.1.6 [includes support for NetBSD envsys]
 	o xfpt-0.11
 	o xfractint-20.04p16
 	o xfs-1.1.1 [wip]
