--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25354 2025/01/28 22:18:43 gutteridge Exp $
+$NetBSD: TODO,v 1.25355 2025/01/29 13:50:22 adam Exp $
 
 Suggested new packages
 ======================
@@ -1312,7 +1312,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o torrentzip-2.1.0
 	o trafficserver-9.0.1
 	o transmission-4.0.4
-	o tree-sitter-0.24.7
 	o tree-sitter-heex-0.8.0
 	o trimmomatic-0.39
 	o tripwire-2.3.1 [see also pkg/22362]
