--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25361 2025/01/30 11:09:02 adam Exp $
+$NetBSD: TODO,v 1.25362 2025/01/30 11:18:51 wiz Exp $
 
 Suggested new packages
 ======================
@@ -614,6 +614,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o evas-software-x11-1.7.10
 	o evas-tiff-1.7.10
 	o evas-xpm-1.7.10
+	o evolution-3.55.1 [needs webkit-gtk update]
 	o evolution-couchdb-0.4.5
 	o evolution-exchange-3.5.2
 	o evolution-mapi-0.32.2
