--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25362 2025/01/30 11:18:51 wiz Exp $
+$NetBSD: TODO,v 1.25363 2025/01/30 12:01:38 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1155,6 +1155,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-sybase-0.37
 	o py-syslog-ng-3.31.2
 	o py-tokyocabinet-0.6
+	o py-torch-2.6
 	o py-twine-6.1.0
 	o py-uliweb-0.6
 	o py-yubiauth-0.3.10
