--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25364 2025/01/30 22:30:12 wiz Exp $
+$NetBSD: TODO,v 1.25365 2025/01/30 23:46:55 pho Exp $
 
 Suggested new packages
 ======================
@@ -1047,7 +1047,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pam-krb5-4.10
 	o pam-passwdqc-2.0.2
 	o pam-u2f-1.3.1
-	o pandoc-cli-3.6.2
 	o papirus-folders-1.8.0
 	o parrot-8.1.0
 	o passenger-6.0.20
