--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25365 2025/01/30 23:46:55 pho Exp $
+$NetBSD: TODO,v 1.25366 2025/01/31 08:07:11 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1229,6 +1229,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o silc-1.1.11
 	o silc-client-1.1.11
 	o silc-server-1.1.19
+	o simgear-2020.3.19
 	o sitescooper-3.1.2
 	o sjeng-11.2
 	o skf-2.10.14
