--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25367 2025/01/31 11:52:51 wiz Exp $
+$NetBSD: TODO,v 1.25368 2025/01/31 12:25:59 micha Exp $
 
 Suggested new packages
 ======================
@@ -631,7 +631,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o flashplayer-0.4.13
 	o flatbuffers-1.12.0
 	o flow-tools-0.411
-	o fltk-1.4.0
 	o fluent-bit-1.7.4
 	o fortunes-calvin-0.3
 	o fortunes-de-0.34
