--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25368 2025/01/31 12:25:59 micha Exp $
+$NetBSD: TODO,v 1.25369 2025/01/31 12:34:19 wiz Exp $
 
 Suggested new packages
 ======================
@@ -773,7 +773,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o html2wml-0.4.11
 	o http_load-20140814
 	o hwloc-2.11
-	o iaito-5.9.9
 	o ibus-hangul-1.5.4
 	o icdprog-0.5
 	o icedtea-web-1.6.2
