--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25377 2025/02/01 07:22:15 adam Exp $
+$NetBSD: TODO,v 1.25378 2025/02/01 08:40:13 wiz Exp $
 
 Suggested new packages
 ======================
@@ -512,7 +512,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o calibre-7.24.0 [requires py-qt6-webengine]
 	o calligra-3.0.1 [in wip; koffice successor]
 	o camlp4-4.12
-	o camlp5-8.03.01 [wip]
 	o carbons-purple-0.2.3
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o cargo-c-0.10.9 [wip, needs rust 1.82]
