--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25378 2025/02/01 08:40:13 wiz Exp $
+$NetBSD: TODO,v 1.25379 2025/02/01 13:40:22 wiz Exp $
 
 Suggested new packages
 ======================
@@ -939,6 +939,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o moodle-4.5.1 (LTS)
 	o mopher-0.6.0
 	o moserial-2.30.0
+	o mozilla-rootcerts-1.1.20250123
 	o mserv-devel-0.41
 	o mtail-1.2.0
 	o multitail-6.4.2
