--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25381 2025/02/02 10:59:19 wiz Exp $
+$NetBSD: TODO,v 1.25382 2025/02/02 13:36:59 he Exp $
 
 Suggested new packages
 ======================
@@ -1197,7 +1197,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o rt4-4.4.4
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
 	o rubber-1.5.1
-	o rust-1.82.0 [wip]
 	o rust-1.84.1
 	o rvault-0.4
 	o rvm-1.20
