--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25382 2025/02/02 13:36:59 he Exp $
+$NetBSD: TODO,v 1.25383 2025/02/02 15:48:27 wiz Exp $
 
 Suggested new packages
 ======================
@@ -405,7 +405,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o R-mapproj-3
 	o R-ncdf-1.6.9
 	o SDL-3.2.0
-	o SDL2-2.30.12
 	o SOGo5-5.11.1 [wip]
 	o SOPE5-5.11.1 [wip]
 	o SQLiteCpp-2.5.0
@@ -857,7 +856,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libgiigic-1.1.2
 	o libgnomekbd-3.4.0.2
 	o libgtop-2.40 [blocking update of mate-system-monitor]
-	o libhighway-1.2.0
 	o libisoburn-1.5.4
 	o libisofs-1.5.4
 	o libixp-0.5 [breaks wmii-3.6, wait for compatible version; see also wmii+ixp entry]
@@ -1145,7 +1143,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-numba-0.61.0
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
-	o py-orjson-3.10.15 [rust 1.82]
+	o py-orjson-3.10.15
 	o py-pdf-parser-0.7.4
 	o py-pip-25.0
 	o py-postgresql-5.1.2
