--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25394 2025/02/02 16:23:21 wiz Exp $
+$NetBSD: TODO,v 1.25395 2025/02/02 17:51:19 wiz Exp $
 
 Suggested new packages
 ======================
@@ -490,7 +490,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o bind-9.20.5
 	o bing-1.3.5
 	o binkd-104
-	o binutils-2.43
+	o binutils-2.44
 	o binutils-mips-current-2.36.1
 	o bioperl-1.7.8
 	o bird-2.0.8
@@ -1187,7 +1187,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o rt4-4.4.4
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
 	o rubber-1.5.1
-	o rust-1.84.1
+	o rust-1.84.1 [wip]
 	o rvault-0.4
 	o rvm-1.20
 	o sabayon-2.30.1
