--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25396 2025/02/03 02:00:40 scole Exp $
+$NetBSD: TODO,v 1.25397 2025/02/03 08:06:26 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1288,7 +1288,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o tightvnc-2.7.10
 	o tile-0.7.4
 	o tk-9.0
-	o tk-tkimg 2.0.1 [at http://tkimg.sourceforge.net/]
+	o tk-tkimg-2.0.1 [at http://tkimg.sourceforge.net/]
 	o tkcon-2.7.3
 	o tkhylafax-3.2
 	o tkinfo-2.11
