--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25400 2025/02/04 12:17:26 adam Exp $
+$NetBSD: TODO,v 1.25401 2025/02/06 09:58:58 wiz Exp $
 
 Suggested new packages
 ======================
@@ -929,7 +929,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o mipsel-none-elf-gcc-9.3.0
 	o mit-scheme-bin-9.2
 	o modular-xorg-server-21.1.15
-	o modular-xorg-xwayland-24.1.3
+	o modular-xorg-xwayland-24.1.5
 	o mono-nat-1.1.0
 	o monocypher-3.1.2
 	o moodle-4.5.1 (LTS)
