--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25402 2025/02/06 14:36:28 adam Exp $
+$NetBSD: TODO,v 1.25403 2025/02/07 03:25:27 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -1128,7 +1128,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-input-pad-1.4.2
 	o py-mailman-3.3.10
 	o py-newt-0.52.21
-	o py-numba-0.61.0
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
