--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25403 2025/02/07 03:25:27 ryoon Exp $
+$NetBSD: TODO,v 1.25404 2025/02/07 09:24:41 wiz Exp $
 
 Suggested new packages
 ======================
@@ -821,7 +821,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o kdesdk-thumbnailers-20.08.0
 	o kdevelop4-4.7.2
 	o kdevplatform-1.7.1
-	o kdiff3-1.11.4
 	o kdsoap-1.10.0
 	o keybinder-0.3.2
 	o kfilemetadata-5.81.0
