--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25406 2025/02/07 19:51:21 wiz Exp $
+$NetBSD: TODO,v 1.25407 2025/02/07 21:51:10 adam Exp $
 
 Suggested new packages
 ======================
@@ -646,7 +646,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o ftplibpp-2.0.2
 	o fuse-unionfs-2.1
 	o fvwm2-themes-0.7.0
-	o gajim-1.7.3
 	o gallery3-3.0.9
 	o gammu-1.42.0
 	o ganglia-3.7.5
