--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25407 2025/02/07 21:51:10 adam Exp $
+$NetBSD: TODO,v 1.25408 2025/02/07 21:54:26 wiz Exp $
 
 Suggested new packages
 ======================
@@ -985,7 +985,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o opencl-3.0.12
 	o opencpn-plugin-draw-1.8.5.2
 	o opencsg-1.4.2
-	o opencv-4.11.0
 	o opendnssec-2.1.8
 	o opengrok-1.7.1
 	o openh323-1.19.1
