--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25409 2025/02/07 21:59:03 wiz Exp $
+$NetBSD: TODO,v 1.25410 2025/02/08 10:50:04 triaxx Exp $
 
 Suggested new packages
 ======================
@@ -1326,7 +1326,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o virtinst-0.600.4
 	o virtuoso-7.2.0p1
 	o visual-regexp-3.1
-	o vms-empire-1.16
 	o vnc-4.0 [http://www.realvnc.com/download.html|pkgsrc-wip]
 	o vnstat-2.14
 	o wMosaic-3.8.22
